--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -1,7 +1,9 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/portraitRL"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/black"
     android:gravity="top"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
@@ -11,14 +13,16 @@
 
     <TextView
         android:id="@+id/textView1"
+        style="@style/TextoAsteroides"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="10dp"
-        android:text="@string/titulo" />
+        android:text="@string/titulo"/>
 
     <Button
         android:id="@+id/button1"
+        style="@style/TextoAsteroides.botones"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/textView1"
@@ -28,6 +32,7 @@
 
     <Button
         android:id="@+id/button2"
+        style="@style/TextoAsteroides.botones"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/button1"
@@ -37,6 +42,7 @@
 
     <Button
         android:id="@+id/button3"
+        style="@style/TextoAsteroides.botones"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/button2"
@@ -46,6 +52,7 @@
 
     <Button
         android:id="@+id/button4"
+        style="@style/TextoAsteroides.botones"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/button3"
