--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -17,4 +17,13 @@
         <!-- All customizations that are NOT specific to a particular API-level can go here. -->
     </style>
 
+    <style name="TextoAsteroides">
+        <item name="android:textColor">@color/whitesmoke</item>
+        <item name="android:textSize">30sp</item>
+    </style>
+    
+    <style name="TextoAsteroides.botones">
+        <item name="android:textSize">20sp</item>
+    </style>
+    
 </resources>
